RESOLVED FIXED31775
[Qt] DRT: dumpBackForwardList() does not work properly with non-file URLs.
https://bugs.webkit.org/show_bug.cgi?id=31775
Summary [Qt] DRT: dumpBackForwardList() does not work properly with non-file URLs.
Jakub Wieczorek
Reported 2009-11-21 16:07:34 PST
LayoutTestController::dumpBackForwardList() should work with local URLs as well as with normal URLs (in http tests for instance). Currently it does not output the latter properly.
Attachments
proposed patch (6.01 KB, patch)
2009-11-21 16:16 PST, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-11-21 16:16:43 PST
Created attachment 43662 [details] proposed patch This change fixes some http/navigation tests: Before: 6 test cases (7%) succeeded 54 test cases (70%) had incorrect layout 12 test cases (15%) were new 2 test cases (2%) timed out 3 test cases (3%) crashed 1 test case (1%) had stderr output After: 32 test cases (41%) succeeded 28 test cases (36%) had incorrect layout 12 test cases (15%) were new 2 test cases (2%) timed out 3 test cases (3%) crashed 1 test case (1%) had stderr output Not setting r? because of the dependency on https://bugs.webkit.org/show_bug.cgi?id=31638
Jakub Wieczorek
Comment 2 2009-11-22 12:29:57 PST
WebKit Commit Bot
Comment 3 2009-11-23 13:48:21 PST
Comment on attachment 43662 [details] proposed patch Clearing flags on attachment: 43662 Committed r51316: <http://trac.webkit.org/changeset/51316>
WebKit Commit Bot
Comment 4 2009-11-23 13:48:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.