2009-11-23  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT: dumpBackForwardList() does not work properly with non-file URLs.
        https://bugs.webkit.org/show_bug.cgi?id=31775

        LayoutTestController::dumpBackForwardList() should work with local URLs
        as well as with normal URLs (in http tests for instance).
        Currently it does not output the latter properly.

        Unskip a bunch of passing http/navigation tests.

        * platform/qt/Skipped:
2009-11-23  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT: dumpBackForwardList() does not work properly with non-file URLs.
        https://bugs.webkit.org/show_bug.cgi?id=31775

        LayoutTestController::dumpBackForwardList() should work with local URLs
        as well as with normal URLs (in http tests for instance).
        Currently it does not output the latter properly.

        Unskip a bunch of passing http/navigation tests.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::dumpHistoryItem):

Canonical link: https://commits.webkit.org/42745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51316 268f45cc-cd09-0410-ab3c-d52691b4dbfc